--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=Production
-APP_KEY=base64:MsUJo+qAhIVGPx52r1mbxCYn5YbWtCx8FQ7pTaHEvRo=base64:Ign7MpdXw4FMI5ai7SXXiU2vbraqhyEK1NniKPNJKGY=
+APP_KEY=base64:7cf39f43-3363-41dc-a55b-3d039a44529c
 APP_DEBUG=true
 APP_URL=http://kelaskita.herokuapp.com
 
