--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=Production
 APP_KEY=base64:XNsHHrxPoAyi4DOPYnuChIGtLbM2DF2uKABIbStuLHw=
 APP_DEBUG=true
-APP_URL=
+APP_URL=http://kelasbelajar.herokuapp.com
 
 LOG_CHANNEL=stack
 
