--- a/.env
+++ b/.env
@@ -2,16 +2,16 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:U1uhEcYMgarmoPRpm9lmODp35W7hm8iQ8GYSdn1vUPc=
 APP_DEBUG=true
-APP_URL=http://kelasbelajar.herokuapp.com
+APP_URL=http://13.250.104.94/kelaskita
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=aa1pazbiluya0ku.cxz8qtmgj6ru.ap-southeast-1.rds.amazonaws.com
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=aa1pazbiluya0ku
-DB_USERNAME=kelasbelajar
-DB_PASSWORD=P4ssw0rd
+DB_DATABASE=kelaskita
+DB_USERNAME=root
+DB_PASSWORD=h4r4juku
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
