--- a/.env
+++ b/.env
@@ -1,17 +1,17 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:U1uhEcYMgarmoPRpm9lmODp35W7hm8iQ8GYSdn1vUPc=
+APP_KEY=base64:+X6Ooc4uuvs8kmn+Gf+NBv5YPhlQP7WFV9Nk9GB87uc=
 APP_DEBUG=true
-APP_URL=http://13.250.104.94/kelaskita
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=kelaskita
+DB_DATABASE=vian_kelaskita
 DB_USERNAME=root
-DB_PASSWORD=h4r4juku
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
